# boringhyper

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: cf_test.rs
